--- a/book.html
+++ b/book.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BFF</title>
-    <link rel="stylesheet" href="Style.css" />
+    <link rel="stylesheet" href="style.css" />
     <style>
       body {
       background: linear-gradient(135deg, #f984b5, #f57b8f);
